# AI

RAG_Agent_Project/: .env.example  .gitignore  NETFREE_SOLUTION.md  QUICKSTART.md  README.md  app_complete_full.py  app_local.py  app_stage_a.py  app_workflow.py  data_extractor.py  ingest_extraction.py  ingest_local.py  ingest_stage_a.py  ingest_workflow.py  requirements_final.txt  router.py  schema.py  workflow_engine.py  workflow_events.py  workflow_steps.py
RAG_Agent_Project/dummy_data/: rag_intro.md
gradio_cli_app/: README.md  check_openai.py  main.py  pyproject.toml
gradio_cli_app/.gradio/flagged/: dataset1.csv
